# hillel_school_cpp_basic

./: CMakeLists.txt  README.md
2025-11/homework/: README.md  main.cpp
2025-11/unit-13/homework/: README.md
2025-11/unit-19/: main.cpp  products.csv
2025-11/unit-6/: Product.hpp  main.cpp
todo-list-app/: CMakeLists.txt  Makefile  MenuCLI.cpp  MenuCLI.hpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  main.cpp  utils.hpp
unit-6/: CMakeLists.txt  base-class.cpp  encapsulation.cpp  inheritance.cpp  polymorphism.cpp  virtual-override.cpp  virtual-without-override.cpp
unit-8/: friend.cpp
